--- a/public/assignment/register.html
+++ b/public/assignment/register.html
@@ -40,7 +40,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="#">Register</a></li>
+                <li class="active"><a href="#">Register<span class="sr-only">(current)</span></a></li>
                 <li><a href="#">Login</a></li>
                 <li><a href="#">Username</a></li>
                 <li><a href="#">Logout</a></li>
