Adding login.html and updating nav link in register.html

--- a/public/assignment/login.html
+++ b/public/assignment/login.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <!--<link rel="icon" href="../../favicon.ico">-->
 
-    <title>Form Maker - Register</title>
+    <title>Form Maker - Login</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
@@ -40,8 +40,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="#">Register<span class="sr-only">(current)</span></a></li>
-                <li><a href="login.html">Login</a></li>
+                <li><a href="register.html">Register</a></li>
+                <li class="active"><a href="#">Login<span class="sr-only">(current)</span></a></li>
                 <li><a href="#">Username</a></li>
                 <li><a href="#">Logout</a></li>
             </ul>
@@ -60,52 +60,36 @@
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <h1 class="page-header">Register</h1>
-                <form class="form-horizontal">
-                    <div class="form-group">
-                        <label for="inputusername3" class="col-sm-3 control-label"><p class="text-left">Username:</p></label>
-                        <div class="col-sm-6">
-                            <input type="email" class="form-control" id="inputusername3" placeholder="Username">
-                        </div>
-                        <div class="col-sm-3">
-                        </div>
+            <h1 class="page-header">Login</h1>
+            <form class="form-horizontal">
+                <div class="form-group">
+                    <label for="inputusername3" class="col-sm-3 control-label"><p class="text-left">Username:</p></label>
+                    <div class="col-sm-6">
+                        <input type="email" class="form-control" id="inputusername3" placeholder="Username">
                     </div>
+                    <div class="col-sm-3">
+                    </div>
+                </div>
 
-                    <div class="form-group">
-                        <label for="inputPassword3" class="col-sm-3 control-label"><p class="text-left">Password:</p></label>
-                        <div class="col-sm-6">
-                            <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-                        </div>
-                        <div class="col-sm-3">
-                        </div>
+                <div class="form-group">
+                    <label for="inputPassword3" class="col-sm-3 control-label"><p class="text-left">Password:</p></label>
+                    <div class="col-sm-6">
+                        <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
                     </div>
-                    <div class="form-group">
-                        <label for="inputVPassword3" class="col-sm-3 control-label"><p class="text-left text-nowrap">Verify Password:</p></label>
-                        <div class="col-sm-6">
-                            <input type="password" class="form-control" id="inputVPassword3" placeholder="Password">
-                        </div>
-                        <div class="col-sm-3">
-                        </div>
+                    <div class="col-sm-3">
                     </div>
-                    <div class="form-group">
-                        <label for="inputEmail3" class="col-sm-3 control-label"><p class="text-left">Email:</p></label>
-                        <div class="col-sm-6">
-                            <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-                        </div>
-                        <div class="col-sm-3">
-                        </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-3 col-sm-6">
+                        <button type="submit" class="btn btn-default btn-block">Login</button>
                     </div>
-                    <div class="form-group">
-                        <div class="col-sm-offset-3 col-sm-6">
-                            <button type="submit" class="btn btn-default btn-block">Register</button>
-                        </div>
-                        <div class="col-sm-3">
-                        </div>
+                    <div class="col-sm-3">
                     </div>
-                </form>
-        </div>
+                </div>
+            </form>
         </div>
     </div>
+</div>
 </div>
 
 <!-- Bootstrap core JavaScript
