--- a/public/assignment/profile.html
+++ b/public/assignment/profile.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <!--<link rel="icon" href="../../favicon.ico">-->
 
-    <title>Form Maker - Login</title>
+    <title>Form Maker - Profile</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
@@ -41,7 +41,7 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="register.html">Register</a></li>
-                <li class="active"><a href="#">Login<span class="sr-only">(current)</span></a></li>
+                <li><a href="login.html">Login</a></li>
                 <li><a href="#">Username</a></li>
                 <li><a href="#">Logout</a></li>
             </ul>
@@ -54,13 +54,13 @@
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
                 <li><a href="home.html">Home</a></li>
-                <li><a href="profile.html">Profile</a></li>
+                <li class="active"><a href="#">Profile<span class="sr-only">(current)</span></a></li>
                 <li><a href="#">Admin</a></li>
                 <li><a href="#">Forms</a></li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <h1 class="page-header">Login</h1>
+            <h1 class="page-header">Profile</h1>
             <form class="form-horizontal">
                 <div class="form-group">
                     <label for="inputusername3" class="col-sm-3 control-label"><p class="text-left">Username:</p></label>
@@ -80,8 +80,32 @@
                     </div>
                 </div>
                 <div class="form-group">
+                    <label for="firstrname3" class="col-sm-3 control-label"><p class="text-left">First Name:</p></label>
+                    <div class="col-sm-6">
+                        <input type="text" class="form-control" id="firstrname3" placeholder="First Name">
+                    </div>
+                    <div class="col-sm-3">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="lastrname3" class="col-sm-3 control-label"><p class="text-left">Last Name:</p></label>
+                    <div class="col-sm-6">
+                        <input type="text" class="form-control" id="lastrname3" placeholder="Last Name">
+                    </div>
+                    <div class="col-sm-3">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-3 control-label"><p class="text-left">Email:</p></label>
+                    <div class="col-sm-6">
+                        <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                    </div>
+                    <div class="col-sm-3">
+                    </div>
+                </div>
+                <div class="form-group">
                     <div class="col-sm-offset-3 col-sm-6">
-                        <button type="submit" class="btn btn-default btn-block">Login</button>
+                        <button type="submit" class="btn btn-default btn-block">Update</button>
                     </div>
                     <div class="col-sm-3">
                     </div>
