--- a/public/assignment/register.html
+++ b/public/assignment/register.html
@@ -56,7 +56,7 @@
                 <li><a href="home.html">Home</a></li>
                 <li><a href="profile.html">Profile</a></li>
                 <li><a href="admin.html">Admin</a></li>
-                <li><a href="#">Forms</a></li>
+                <li><a href="forms.html">Forms</a></li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
@@ -65,7 +65,7 @@
                     <div class="form-group">
                         <label for="inputusername3" class="col-sm-3 control-label"><p class="text-left">Username:</p></label>
                         <div class="col-sm-6">
-                            <input type="email" class="form-control" id="inputusername3" placeholder="Username">
+                            <input type="text" class="form-control" id="inputusername3" placeholder="Username">
                         </div>
                         <div class="col-sm-3">
                         </div>
