--- a/public/assignment/admin.html
+++ b/public/assignment/admin.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <!--<link rel="icon" href="../../favicon.ico">-->
+    <link rel="icon" href="img/favicon.ico">
 
     <title>Form Maker - Admin</title>
 
@@ -30,7 +29,8 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -68,17 +68,24 @@
                     <tr>
                         <th>
                             <a href="#"> <span class="glyphicon glyphicon-chevron-down sort-glyphicon">
-                            </span></a>&nbsp;Username</th>
+                            </span></a>&nbsp;Username
+                        </th>
                         <th>
                             <a href="#"><span class="glyphicon glyphicon-chevron-down sort-glyphicon">
-                            </span></a>&nbsp;Password</th>
+                            </span></a>&nbsp;Password
+                        </th>
                         <th>
                             <a href="#"> <span class="glyphicon glyphicon-chevron-down sort-glyphicon">
-                            </span></a>&nbsp;Role</th>
+                            </span></a>&nbsp;Role
+                        </th>
                         <th>Action</th>
                     </tr>
                     <tr>
-                        <td><label class="sr-only" for="usernameTable">username</label><input type="text" id="usernameTable" placeholder="Username" class="form-control table-input"/></td>
+                        <td><label class="sr-only" for="usernameTable">username</label><input type="text"
+                                                                                              id="usernameTable"
+                                                                                              placeholder="Username"
+                                                                                              class="form-control table-input"/>
+                        </td>
                         <td><input type="password" placeholder="Password" class="form-control table-input"/></td>
                         <td><input type="text" placeholder="Role1,Role2.." class="form-control table-input"/></td>
                         <td class="table-content-nowrap">
@@ -100,11 +107,11 @@
                         <td>student</td>
                         <td class="table-content-nowrap">
                             <a href="#">
-                            <span class="glyphicon glyphicon-remove action-glyphicon"></span>
+                                <span class="glyphicon glyphicon-remove action-glyphicon"></span>
                             </a>
                             &nbsp;
                             <a href="#">
-                            <span class="glyphicon glyphicon-pencil action-glyphicon"></span>
+                                <span class="glyphicon glyphicon-pencil action-glyphicon"></span>
                             </a>
                         </td>
                     </tr>
@@ -114,11 +121,11 @@
                         <td>faculty | admin</td>
                         <td class="table-content-nowrap">
                             <a href="#">
-                            <span class="glyphicon glyphicon-remove action-glyphicon"></span>
+                                <span class="glyphicon glyphicon-remove action-glyphicon"></span>
                             </a>
                             &nbsp;
                             <a href="#">
-                            <span class="glyphicon glyphicon-pencil action-glyphicon"></span>
+                                <span class="glyphicon glyphicon-pencil action-glyphicon"></span>
                             </a>
                         </td>
                     </tr>
@@ -128,11 +135,11 @@
                         <td></td>
                         <td class="table-content-nowrap">
                             <a href="#">
-                            <span class="glyphicon glyphicon-remove action-glyphicon"></span>
+                                <span class="glyphicon glyphicon-remove action-glyphicon"></span>
                             </a>
                             &nbsp;
                             <a href="#">
-                            <span class="glyphicon glyphicon-pencil action-glyphicon"></span>
+                                <span class="glyphicon glyphicon-pencil action-glyphicon"></span>
                             </a>
                         </td>
                     </tr>
