--- a/public/assignment/form-fields.html
+++ b/public/assignment/form-fields.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <!--<link rel="icon" href="../../favicon.ico">-->
+    <link rel="icon" href="img/favicon.ico">
 
     <title>Form Maker - Forms</title>
 
@@ -30,7 +29,8 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -65,57 +65,19 @@
                 <li><a href="forms.html">Forms</a></li>
                 <li class="active"><a href="#">Fields</a></li>
             </ul>
-            <!--<div class="table-responsive">
-                 <table class="table">
-                      <tr>
-                          <td>
-                              <label for="fname" class="control-label"><p class="text-left">First Name:</p></label>
-                              <br/>
-                              <input type="text" class="form-control table-input" id="fname" placeholder="First Name">
-                          </td>
-                          <td>
-                              <br/>
-                              <a href="#">
-                                  <span class="action-glyphicon glyphicon glyphicon-pencil"></span>
-                              </a>
-                          </td>
-                      </tr>
-
-                      <tr>
-                         <td>
-                             <label for="fname" class="control-label"><p class="text-left">Add New Field:</p></label>
-                             <br/>
-                                     <select class="form-control table-input" type="text" name="addfield">
-                                         <option value="SLT">Single Line Text</option>
-                                         <option value="DATE">Date</option>
-                                         <option value="DROPDOWN">Dropdown</option>
-                                         <option value="CHECKBOXES">Checkboxes</option>
-                                         <option value="RADIOBUTTONS">Radio Buttons</option>
-                                         <option value="PARAGRAPHFIELD">Paragraph Text Field</option>
-                                     </select>
-                         </td>
-                          <td>
-                              <br/>
-                              <a href="#" class="action-glyphicon">
-                                  <span class="glyphicon glyphicon-plus"></span>
-                              </a>
-                          </td>
-                      </tr>
-                </table>
-            </div>  -->
-           <div class="form-group row">
-               <div class="col-md-6 col-sm-6 col-xs-9">
-                   <label for="fname" class="control-label"><p class="text-left label-field">First Name:</p></label>
-                   <input type="text" class="form-control" id="fname" placeholder="First Name">
-               </div>
-               <div class="col-md-3 col-sm-6 col-xs-3 text-center">
-                   <br/>
-                   <a href="#"><span class="glyphicon glyphicon-pencil action-glyphicon"></span></a>
-                   <a href="#"><span class="glyphicon glyphicon-plus action-glyphicon"></span></a>
-                   <a href="#"><span class="glyphicon glyphicon-remove action-glyphicon"></span></a>
-                   <a href="#"><span class="glyphicon glyphicon-align-justify action-glyphicon"></span></a>
-               </div>
-               <div class="col-md-3"></div>
+            <div class="form-group row">
+                <div class="col-md-6 col-sm-6 col-xs-9">
+                    <label for="fname" class="control-label"><p class="text-left label-field">First Name:</p></label>
+                    <input type="text" class="form-control" id="fname" placeholder="First Name">
+                </div>
+                <div class="col-md-3 col-sm-6 col-xs-3 text-center">
+                    <br/>
+                    <a href="#"><span class="glyphicon glyphicon-pencil action-glyphicon"></span></a>
+                    <a href="#"><span class="glyphicon glyphicon-plus action-glyphicon"></span></a>
+                    <a href="#"><span class="glyphicon glyphicon-remove action-glyphicon"></span></a>
+                    <a href="#"><span class="glyphicon glyphicon-align-justify action-glyphicon"></span></a>
+                </div>
+                <div class="col-md-3"></div>
             </div>
             <div class="form-group row">
                 <div class="col-md-6 col-sm-6 col-xs-9">
@@ -164,8 +126,31 @@
             </div>
             <div class="form-group row">
                 <div class="col-md-6 col-xs-9">
-                    <label for="lname" class="control-label"><p class="text-left label-field">Last Name:</p></label>
-                    <input type="text" class="form-control" id="lname" placeholder="Last Name">
+                    <label class="control-label"><p class="text-left label-field">Roles:</p></label>
+                    <br/>
+                    <input type="checkbox" name="licenseAgreement" id="admin" checked="checked">
+                    <label class="control-label" for="admin"><h5 class="label-field">Admin</h5></label><br/>
+                    <input type="checkbox" name="licenseAgreement" id="student">
+                    <label class="control-label" for="student"><h5 class="label-field">Student</h5></label><br/>
+                    <input type="checkbox" name="licenseAgreement" id="user" checked="checked">
+                    <label class="control-label" for="admin"><h5 class="label-field">User</h5></label><br/></div>
+                <div class="col-md-3 col-xs-3 text-center">
+                    <br/>
+                    <a href="#"><span class="glyphicon glyphicon-pencil action-glyphicon"></span></a>
+                    <a href="#"><span class="glyphicon glyphicon-plus action-glyphicon"></span></a>
+                    <a href="#"><span class="glyphicon glyphicon-remove action-glyphicon"></span></a>
+                    <a href="#"><span class="glyphicon glyphicon-align-justify action-glyphicon"></span></a>
+                </div>
+                <div class="col-md-3"></div>
+            </div>
+            <div class="form-group row">
+                <div class="col-md-6 col-xs-9">
+                    <label class="control-label"><p class="text-left label-field">License Agreement:</p></label>
+                    <br/>
+                    <input type="radio" name="licenseRadio" id="yes" checked="checked">
+                    <label class="control-label" for="yes"><h5 class="label-field">Yes</h5></label><br/>
+                    <input type="radio" name="licenseRadio" id="no">
+                    <label class="control-label" for="no"><h5 class="label-field">No</h5></label><br/>
                 </div>
                 <div class="col-md-3 col-xs-3 text-center">
                     <br/>
