--- a/public/assignment/forms.html
+++ b/public/assignment/forms.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <!--<link rel="icon" href="../../favicon.ico">-->
+    <link rel="icon" href="img/favicon.ico">
 
     <title>Form Maker - Forms</title>
 
@@ -30,7 +29,8 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -73,7 +73,8 @@
                         <th>Action</th>
                     </tr>
                     <tr>
-                        <td><input class="form-control table-input" type="text" name="formName" placeholder="Form Name"></td>
+                        <td><input class="form-control table-input" type="text" name="formName" placeholder="Form Name">
+                        </td>
                         <td class="table-content-nowrap">
                             <a href="#">
                                 <span class="glyphicon glyphicon-plus action-glyphicon"></span>
