--- a/public/assignment/login.html
+++ b/public/assignment/login.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <!--<link rel="icon" href="../../favicon.ico">-->
+    <link rel="icon" href="img/favicon.ico">
 
     <title>Form Maker - Login</title>
 
@@ -30,7 +29,8 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -63,7 +63,8 @@
             <h1 class="page-header">Login</h1>
             <form class="form-horizontal">
                 <div class="form-group">
-                    <label for="inputusername3" class="col-sm-3 control-label"><p class="text-left">Username:</p></label>
+                    <label for="inputusername3" class="col-sm-3 control-label"><p class="text-left">Username:</p>
+                    </label>
                     <div class="col-sm-6">
                         <input type="email" class="form-control" id="inputusername3" placeholder="Username">
                     </div>
@@ -72,7 +73,8 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="inputPassword3" class="col-sm-3 control-label"><p class="text-left">Password:</p></label>
+                    <label for="inputPassword3" class="col-sm-3 control-label"><p class="text-left">Password:</p>
+                    </label>
                     <div class="col-sm-6">
                         <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
                     </div>
