--- a/public/assignment/register.html
+++ b/public/assignment/register.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <!--<link rel="icon" href="../../favicon.ico">-->
+    <link rel="icon" href="img/favicon.ico">
 
     <title>Form Maker - Register</title>
 
@@ -30,7 +29,8 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -61,51 +61,54 @@
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1 class="page-header">Register</h1>
-                <form class="form-horizontal">
-                    <div class="form-group">
-                        <label for="inputusername3" class="col-sm-3 control-label"><p class="text-left">Username:</p></label>
-                        <div class="col-sm-6">
-                            <input type="text" class="form-control" id="inputusername3" placeholder="Username">
-                        </div>
-                        <div class="col-sm-3">
-                        </div>
+            <form class="form-horizontal">
+                <div class="form-group">
+                    <label for="inputusername3" class="col-sm-3 control-label"><p class="text-left">Username:</p>
+                    </label>
+                    <div class="col-sm-6">
+                        <input type="text" class="form-control" id="inputusername3" placeholder="Username">
                     </div>
+                    <div class="col-sm-3">
+                    </div>
+                </div>
 
-                    <div class="form-group">
-                        <label for="inputPassword3" class="col-sm-3 control-label"><p class="text-left">Password:</p></label>
-                        <div class="col-sm-6">
-                            <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-                        </div>
-                        <div class="col-sm-3">
-                        </div>
+                <div class="form-group">
+                    <label for="inputPassword3" class="col-sm-3 control-label"><p class="text-left">Password:</p>
+                    </label>
+                    <div class="col-sm-6">
+                        <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
                     </div>
-                    <div class="form-group">
-                        <label for="inputVPassword3" class="col-sm-3 control-label"><p class="text-left text-nowrap">Verify Password:</p></label>
-                        <div class="col-sm-6">
-                            <input type="password" class="form-control" id="inputVPassword3" placeholder="Password">
-                        </div>
-                        <div class="col-sm-3">
-                        </div>
+                    <div class="col-sm-3">
                     </div>
-                    <div class="form-group">
-                        <label for="inputEmail3" class="col-sm-3 control-label"><p class="text-left">Email:</p></label>
-                        <div class="col-sm-6">
-                            <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-                        </div>
-                        <div class="col-sm-3">
-                        </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputVPassword3" class="col-sm-3 control-label"><p class="text-left text-nowrap">Verify
+                        Password:</p></label>
+                    <div class="col-sm-6">
+                        <input type="password" class="form-control" id="inputVPassword3" placeholder="Password">
                     </div>
-                    <div class="form-group">
-                        <div class="col-sm-offset-3 col-sm-6">
-                            <button type="submit" class="btn btn-default btn-block">Register</button>
-                        </div>
-                        <div class="col-sm-3">
-                        </div>
+                    <div class="col-sm-3">
                     </div>
-                </form>
-        </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-3 control-label"><p class="text-left">Email:</p></label>
+                    <div class="col-sm-6">
+                        <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                    </div>
+                    <div class="col-sm-3">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-3 col-sm-6">
+                        <button type="submit" class="btn btn-default btn-block">Register</button>
+                    </div>
+                    <div class="col-sm-3">
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
+</div>
 </div>
 
 <!-- Bootstrap core JavaScript
