Fixing navigation links.

--- a/public/assignment/form-fields.html
+++ b/public/assignment/form-fields.html
@@ -36,7 +36,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Form Maker</a>
+            <a class="navbar-brand" href="home.html">Form Maker</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -63,124 +63,126 @@
             <h1 class="page-header">Forms</h1>
             <ul class="nav nav-tabs">
                 <li><a href="forms.html">Forms</a></li>
-                <li class="active"><a href="#">Fields</a></li>
+                <li class="active"><a href="form-fields.html">Fields</a></li>
             </ul>
-            <div class="form-group row">
-                <div class="col-md-6 col-sm-6 col-xs-9">
-                    <label for="fname" class="control-label"><p class="text-left label-field">First Name:</p></label>
-                    <input type="text" class="form-control" id="fname" placeholder="First Name">
+            <div class="container-fluid">
+                <div class="form-group row">
+                    <div class="col-md-6 col-sm-6 col-xs-9">
+                        <label for="fname" class="control-label"><p class="text-left label-field">First Name:</p></label>
+                        <input type="text" class="form-control" id="fname" placeholder="First Name">
+                    </div>
+                    <div class="col-md-3 col-sm-6 col-xs-3 text-center">
+                        <br/>
+                        <a href="#"><span class="glyphicon glyphicon-pencil action-glyphicon"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-plus action-glyphicon"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-remove action-glyphicon"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-align-justify action-glyphicon"></span></a>
+                    </div>
+                    <div class="col-md-3"></div>
                 </div>
-                <div class="col-md-3 col-sm-6 col-xs-3 text-center">
-                    <br/>
-                    <a href="#"><span class="glyphicon glyphicon-pencil action-glyphicon"></span></a>
-                    <a href="#"><span class="glyphicon glyphicon-plus action-glyphicon"></span></a>
-                    <a href="#"><span class="glyphicon glyphicon-remove action-glyphicon"></span></a>
-                    <a href="#"><span class="glyphicon glyphicon-align-justify action-glyphicon"></span></a>
+                <div class="form-group row">
+                    <div class="col-md-6 col-sm-6 col-xs-9">
+                        <label for="lname" class="control-label"><p class="text-left label-field">Last Name:</p></label>
+                        <input type="text" class="form-control" id="lname" placeholder="Last Name">
+                    </div>
+                    <div class="col-md-3 col-sm-6 col-xs-3 text-center">
+                        <br/>
+                        <a href="#"><span class="glyphicon glyphicon-pencil action-glyphicon"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-plus action-glyphicon"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-remove action-glyphicon"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-align-justify action-glyphicon"></span></a>
+                    </div>
+                    <div class="col-md-3"></div>
                 </div>
-                <div class="col-md-3"></div>
-            </div>
-            <div class="form-group row">
-                <div class="col-md-6 col-sm-6 col-xs-9">
-                    <label for="lname" class="control-label"><p class="text-left label-field">Last Name:</p></label>
-                    <input type="text" class="form-control" id="lname" placeholder="Last Name">
+                <div class="form-group row">
+                    <div class="col-md-6 col-sm-6 col-xs-9">
+                        <label for="dob" class="control-label"><p class="text-left label-field">Date of Birth:</p></label>
+                        <input type="date" class="form-control" id="dob" placeholder="Date Of Birth">
+                    </div>
+                    <div class="col-md-3 col-sm-6 col-xs-3 text-center">
+                        <br/>
+                        <a href="#"><span class="glyphicon glyphicon-pencil action-glyphicon"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-plus action-glyphicon"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-remove action-glyphicon"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-align-justify action-glyphicon"></span></a>
+                    </div>
+                    <div class="col-md-3"></div>
                 </div>
-                <div class="col-md-3 col-sm-6 col-xs-3 text-center">
-                    <br/>
-                    <a href="#"><span class="glyphicon glyphicon-pencil action-glyphicon"></span></a>
-                    <a href="#"><span class="glyphicon glyphicon-plus action-glyphicon"></span></a>
-                    <a href="#"><span class="glyphicon glyphicon-remove action-glyphicon"></span></a>
-                    <a href="#"><span class="glyphicon glyphicon-align-justify action-glyphicon"></span></a>
+                <div class="form-group row">
+                    <div class="col-md-6 col-sm-6 col-xs-9">
+                        <label for="gender" class="control-label"><p class="text-left label-field">Gender:</p></label>
+                        <select class="form-control" id="gender">
+                            <option value="MALE">Male</option>
+                            <option value="FEMALE">Female</option>
+                        </select>
+                    </div>
+                    <div class="col-md-3 col-sm-6 col-xs-3 text-center">
+                        <br/>
+                        <a href="#"><span class="glyphicon glyphicon-pencil action-glyphicon"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-plus action-glyphicon"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-remove action-glyphicon"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-align-justify action-glyphicon"></span></a>
+                    </div>
+                    <div class="col-md-3"></div>
                 </div>
-                <div class="col-md-3"></div>
-            </div>
-            <div class="form-group row">
-                <div class="col-md-6 col-sm-6 col-xs-9">
-                    <label for="dob" class="control-label"><p class="text-left label-field">Date of Birth:</p></label>
-                    <input type="date" class="form-control" id="dob" placeholder="Date Of Birth">
+                <div class="form-group row">
+                    <div class="col-md-6 col-xs-9">
+                        <label class="control-label"><p class="text-left label-field">Roles:</p></label>
+                        <br/>
+                        <input type="checkbox" name="licenseAgreement" id="admin" checked="checked">
+                        <label class="control-label" for="admin"><h5 class="label-field">Admin</h5></label><br/>
+                        <input type="checkbox" name="licenseAgreement" id="student">
+                        <label class="control-label" for="student"><h5 class="label-field">Student</h5></label><br/>
+                        <input type="checkbox" name="licenseAgreement" id="user" checked="checked">
+                        <label class="control-label" for="admin"><h5 class="label-field">User</h5></label><br/></div>
+                    <div class="col-md-3 col-xs-3 text-center">
+                        <br/>
+                        <a href="#"><span class="glyphicon glyphicon-pencil action-glyphicon"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-plus action-glyphicon"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-remove action-glyphicon"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-align-justify action-glyphicon"></span></a>
+                    </div>
+                    <div class="col-md-3"></div>
                 </div>
-                <div class="col-md-3 col-sm-6 col-xs-3 text-center">
-                    <br/>
-                    <a href="#"><span class="glyphicon glyphicon-pencil action-glyphicon"></span></a>
-                    <a href="#"><span class="glyphicon glyphicon-plus action-glyphicon"></span></a>
-                    <a href="#"><span class="glyphicon glyphicon-remove action-glyphicon"></span></a>
-                    <a href="#"><span class="glyphicon glyphicon-align-justify action-glyphicon"></span></a>
+                <div class="form-group row">
+                    <div class="col-md-6 col-xs-9">
+                        <label class="control-label"><p class="text-left label-field">License Agreement:</p></label>
+                        <br/>
+                        <input type="radio" name="licenseRadio" id="yes" checked="checked">
+                        <label class="control-label" for="yes"><h5 class="label-field">Yes</h5></label><br/>
+                        <input type="radio" name="licenseRadio" id="no">
+                        <label class="control-label" for="no"><h5 class="label-field">No</h5></label><br/>
+                    </div>
+                    <div class="col-md-3 col-xs-3 text-center">
+                        <br/>
+                        <a href="#"><span class="glyphicon glyphicon-pencil action-glyphicon"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-plus action-glyphicon"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-remove action-glyphicon"></span></a>
+                        <a href="#"><span class="glyphicon glyphicon-align-justify action-glyphicon"></span></a>
+                    </div>
+                    <div class="col-md-3"></div>
                 </div>
-                <div class="col-md-3"></div>
-            </div>
-            <div class="form-group row">
-                <div class="col-md-6 col-sm-6 col-xs-9">
-                    <label for="gender" class="control-label"><p class="text-left label-field">Gender:</p></label>
-                    <select class="form-control" id="gender">
-                        <option value="MALE">Male</option>
-                        <option value="FEMALE">Female</option>
-                    </select>
+                <hr/>
+                <div class="form-group row">
+                    <div class="col-md-6 col-sm-6 col-xs-9">
+                        <label for="fname" class="control-label"><p class="text-left label-field">Add New Field:</p></label>
+                        <select class="form-control" type="text" name="addfield">
+                            <option value="SLT">Single Line Text</option>
+                            <option value="DATE">Date</option>
+                            <option value="DROPDOWN">Dropdown</option>
+                            <option value="CHECKBOXES">Checkboxes</option>
+                            <option value="RADIOBUTTONS">Radio Buttons</option>
+                            <option value="PARAGRAPHFIELD">Paragraph Text Field</option>
+                        </select>
+                    </div>
+                    <div class="col-md-3 col-sm-6 col-xs-3 text-center">
+                        <br/>
+                        <a href="#" class="action-glyphicon">
+                            <span class="glyphicon glyphicon-plus"></span>
+                        </a>
+                    </div>
+                    <div class="col-md-3"></div>
                 </div>
-                <div class="col-md-3 col-sm-6 col-xs-3 text-center">
-                    <br/>
-                    <a href="#"><span class="glyphicon glyphicon-pencil action-glyphicon"></span></a>
-                    <a href="#"><span class="glyphicon glyphicon-plus action-glyphicon"></span></a>
-                    <a href="#"><span class="glyphicon glyphicon-remove action-glyphicon"></span></a>
-                    <a href="#"><span class="glyphicon glyphicon-align-justify action-glyphicon"></span></a>
-                </div>
-                <div class="col-md-3"></div>
-            </div>
-            <div class="form-group row">
-                <div class="col-md-6 col-xs-9">
-                    <label class="control-label"><p class="text-left label-field">Roles:</p></label>
-                    <br/>
-                    <input type="checkbox" name="licenseAgreement" id="admin" checked="checked">
-                    <label class="control-label" for="admin"><h5 class="label-field">Admin</h5></label><br/>
-                    <input type="checkbox" name="licenseAgreement" id="student">
-                    <label class="control-label" for="student"><h5 class="label-field">Student</h5></label><br/>
-                    <input type="checkbox" name="licenseAgreement" id="user" checked="checked">
-                    <label class="control-label" for="admin"><h5 class="label-field">User</h5></label><br/></div>
-                <div class="col-md-3 col-xs-3 text-center">
-                    <br/>
-                    <a href="#"><span class="glyphicon glyphicon-pencil action-glyphicon"></span></a>
-                    <a href="#"><span class="glyphicon glyphicon-plus action-glyphicon"></span></a>
-                    <a href="#"><span class="glyphicon glyphicon-remove action-glyphicon"></span></a>
-                    <a href="#"><span class="glyphicon glyphicon-align-justify action-glyphicon"></span></a>
-                </div>
-                <div class="col-md-3"></div>
-            </div>
-            <div class="form-group row">
-                <div class="col-md-6 col-xs-9">
-                    <label class="control-label"><p class="text-left label-field">License Agreement:</p></label>
-                    <br/>
-                    <input type="radio" name="licenseRadio" id="yes" checked="checked">
-                    <label class="control-label" for="yes"><h5 class="label-field">Yes</h5></label><br/>
-                    <input type="radio" name="licenseRadio" id="no">
-                    <label class="control-label" for="no"><h5 class="label-field">No</h5></label><br/>
-                </div>
-                <div class="col-md-3 col-xs-3 text-center">
-                    <br/>
-                    <a href="#"><span class="glyphicon glyphicon-pencil action-glyphicon"></span></a>
-                    <a href="#"><span class="glyphicon glyphicon-plus action-glyphicon"></span></a>
-                    <a href="#"><span class="glyphicon glyphicon-remove action-glyphicon"></span></a>
-                    <a href="#"><span class="glyphicon glyphicon-align-justify action-glyphicon"></span></a>
-                </div>
-                <div class="col-md-3"></div>
-            </div>
-            <hr/>
-            <div class="form-group row">
-                <div class="col-md-6 col-sm-6 col-xs-9">
-                    <label for="fname" class="control-label"><p class="text-left label-field">Add New Field:</p></label>
-                    <select class="form-control" type="text" name="addfield">
-                        <option value="SLT">Single Line Text</option>
-                        <option value="DATE">Date</option>
-                        <option value="DROPDOWN">Dropdown</option>
-                        <option value="CHECKBOXES">Checkboxes</option>
-                        <option value="RADIOBUTTONS">Radio Buttons</option>
-                        <option value="PARAGRAPHFIELD">Paragraph Text Field</option>
-                    </select>
-                </div>
-                <div class="col-md-3 col-sm-6 col-xs-3 text-center">
-                    <br/>
-                    <a href="#" class="action-glyphicon">
-                        <span class="glyphicon glyphicon-plus"></span>
-                    </a>
-                </div>
-                <div class="col-md-3"></div>
             </div>
         </div>
     </div>
