--- a/public/assignment/admin.html
+++ b/public/assignment/admin.html
@@ -36,7 +36,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Form Maker</a>
+            <a class="navbar-brand" href="home.html">Form Maker</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -55,7 +55,7 @@
             <ul class="nav nav-sidebar">
                 <li><a href="home.html">Home</a></li>
                 <li><a href="profile.html">Profile</a></li>
-                <li class="active"><a href="#">Admin<span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="admin.html">Admin<span class="sr-only">(current)</span></a></li>
                 <li><a href="forms.html">Forms</a></li>
             </ul>
         </div>
