--- a/public/assignment/profile.html
+++ b/public/assignment/profile.html
@@ -36,7 +36,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Form Maker</a>
+            <a class="navbar-brand" href="home.html">Form Maker</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -54,14 +54,14 @@
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
                 <li><a href="home.html">Home</a></li>
-                <li class="active"><a href="#">Profile<span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="profile.html">Profile<span class="sr-only">(current)</span></a></li>
                 <li><a href="admin.html">Admin</a></li>
                 <li><a href="forms.html">Forms</a></li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1 class="page-header">Profile</h1>
-            <form class="form-horizontal">
+            <form class="form-horizontal" action="profile.html">
                 <div class="form-group">
                     <label for="inputusername3" class="col-sm-3 control-label"><p class="text-left">Username:</p>
                     </label>
@@ -115,7 +115,6 @@
             </form>
         </div>
     </div>
-</div>
 </div>
 
 <!-- Bootstrap core JavaScript
