--- a/public/assignment/register.html
+++ b/public/assignment/register.html
@@ -36,11 +36,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Form Maker</a>
+            <a class="navbar-brand" href="home.html">Form Maker</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="#">Register<span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="register.html">Register<span class="sr-only">(current)</span></a></li>
                 <li><a href="login.html">Login</a></li>
                 <li><a href="#">Username</a></li>
                 <li><a href="#">Logout</a></li>
@@ -61,7 +61,7 @@
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1 class="page-header">Register</h1>
-            <form class="form-horizontal">
+            <form class="form-horizontal" action="profile.html">
                 <div class="form-group">
                     <label for="inputusername3" class="col-sm-3 control-label"><p class="text-left">Username:</p>
                     </label>
@@ -108,7 +108,6 @@
             </form>
         </div>
     </div>
-</div>
 </div>
 
 <!-- Bootstrap core JavaScript
