--- a/public/assignment/profile.html
+++ b/public/assignment/profile.html
@@ -67,7 +67,7 @@
                     <label for="inputusername3" class="col-sm-3 control-label"><p class="text-left">Username:</p>
                     </label>
                     <div class="col-sm-6">
-                        <input type="email" class="form-control" id="inputusername3" placeholder="Username">
+                        <input type="text" class="form-control" id="inputusername3" placeholder="Username">
                     </div>
                     <div class="col-sm-3">
                     </div>
