--- a/public/assignment/form-fields.html
+++ b/public/assignment/form-fields.html
@@ -69,7 +69,8 @@
             <div class="container-fluid">
                 <div class="form-group row">
                     <div class="col-md-6 col-sm-6 col-xs-9">
-                        <label for="fname" class="control-label"><p class="text-left label-field">First Name:</p></label>
+                        <label for="fname" class="control-label"><p class="text-left label-field">First Name:</p>
+                        </label>
                         <input type="text" class="form-control" id="fname" placeholder="First Name">
                     </div>
                     <div class="col-md-3 col-sm-6 col-xs-3 text-center">
@@ -97,7 +98,8 @@
                 </div>
                 <div class="form-group row">
                     <div class="col-md-6 col-sm-6 col-xs-9">
-                        <label for="dob" class="control-label"><p class="text-left label-field">Date of Birth:</p></label>
+                        <label for="dob" class="control-label"><p class="text-left label-field">Date of Birth:</p>
+                        </label>
                         <input type="date" class="form-control" id="dob" placeholder="Date Of Birth">
                     </div>
                     <div class="col-md-3 col-sm-6 col-xs-3 text-center">
@@ -166,7 +168,8 @@
                 <hr/>
                 <div class="form-group row">
                     <div class="col-md-6 col-sm-6 col-xs-9">
-                        <label for="fname" class="control-label"><p class="text-left label-field">Add New Field:</p></label>
+                        <label for="fname" class="control-label"><p class="text-left label-field">Add New Field:</p>
+                        </label>
                         <select class="form-control" type="text" name="addfield">
                             <option value="SLT">Single Line Text</option>
                             <option value="DATE">Date</option>
