Moving search to navbar. Changing the theme.

--- a/public/experiments/index.html
+++ b/public/experiments/index.html
@@ -6,6 +6,13 @@
 </head>
 <body>
 <h1>Experiments</h1>
-<a href="dashboard_example.html">Dashboard Example</a>
+<ul>
+    <li>
+        <a href="dashboard_example.html">Dashboard Example</a>
+    </li>
+    <li>
+        <a href="spotify_search_track.html">Trying out Spotify API</a>
+    </li>
+</ul>
 </body>
 </html>
