--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="../assignment/home.html">Assignments</a></li>
                 <li><a href="../experiments/index.html">Experiments</a></li>
+                <li><a href="https://docs.google.com/document/d/1kYC5uNZ6V7gJsAE-lStp5Bqs4d9AdjHKD72f4bLPPmE/edit?usp=sharing">Project Document</a></li>
                 <li><a href="../project/index.html">Project</a></li>
             </ul>
         </div>
@@ -75,6 +76,7 @@
                     <div class="list-group">
                         <a href="../experiments" class="list-group-item">Experiments &raquo;</a>
                         <a href="../assignment" class="list-group-item">Assignment &raquo;</a>
+                        <a href="https://docs.google.com/document/d/1kYC5uNZ6V7gJsAE-lStp5Bqs4d9AdjHKD72f4bLPPmE/edit?usp=sharing" class="list-group-item">Project Document&raquo;</a>
                         <a href="../project" class="list-group-item">Project &raquo;</a>
                     </div>
                 </div>
