Updating the landing page content.

--- a/public/index.html
+++ b/public/index.html
@@ -75,13 +75,18 @@
                     <h6>-Milton Glaser</h6>
                 </blockquote>
                 <p>
-                    <h4>Hi there, my name is Aditya Ghosh. I’m currently pursuing a Master’s of Science degree in Computer Science at Northeastern University.</h4>
+                    <h5>Hi there, my name is Aditya Ghosh. I’m currently pursuing a Master’s of Science degree in Computer Science at Northeastern University.</h5>
                 </p>
                 <p>
-                    <h4>I have 2 years of work experience at Tata Consultancy Services, as a Software Engineer.
+                    <h5>I have 2 years of work experience at Tata Consultancy Services, as a Software Engineer.
                     My major role in the company was to develop and maintain a web application for a client using my skills in ASP.NET, MSSQL and JavaScript.
                     I took on a secondary role of Analysis and resolution of data misrepresentation, where I got an in depth knowledge about my project’s database structure. Further I learnt about performance tuning by optimizing joins. I used this technique to optimize over 20 Stored Procedures during my tenure in the company.
-                    </h4>
+                    </h5>
+                </p>
+                <p>
+                <h5>
+                Currently I'm building responsive web application using the MEAN stack. Check my <a href="https://docs.google.com/document/d/1kYC5uNZ6V7gJsAE-lStp5Bqs4d9AdjHKD72f4bLPPmE/edit?usp=sharing" target="_blank">Project Documentation</a> for a brief overview of the application.
+                </h5>
                 </p>
             </div>
             <div class="row">
@@ -90,7 +95,7 @@
                     <div class="list-group">
                         <a href="../experiments" class="list-group-item">Experiments &raquo;</a>
                         <a href="../assignment" class="list-group-item">Assignment &raquo;</a>
-                        <a href="https://docs.google.com/document/d/1kYC5uNZ6V7gJsAE-lStp5Bqs4d9AdjHKD72f4bLPPmE/edit?usp=sharing" class="list-group-item">Project Document&raquo;</a>
+                        <a href="https://docs.google.com/document/d/1kYC5uNZ6V7gJsAE-lStp5Bqs4d9AdjHKD72f4bLPPmE/edit?usp=sharing" class="list-group-item">Project Document &raquo;</a>
                         <a href="../project" class="list-group-item">Project &raquo;</a>
                     </div>
                 </div>
