--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -23,6 +23,12 @@
     <script src="config.js"></script>
     <script src="views/main/main.controller.js"></script>
     <script src="views/header/header.controller.js"></script>
+    <script src="views/sidebar/sidebar.controller.js"></script>
+    <script src="views/users/register.controller.js"></script>
+    <script src="views/users/profile.controller.js"></script>
+
+    <!-- Angular Services-->
+    <script src="services/user.service.client.js"></script>
 
 
     <!-- Custom styles for this template -->
