--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="../assignment/home.html">Assignments</a></li>
+                <li><a href="../assignment/index.html">Assignments</a></li>
                 <li><a href="../experiments/index.html">Experiments</a></li>
                 <li><a href="https://docs.google.com/document/d/1kYC5uNZ6V7gJsAE-lStp5Bqs4d9AdjHKD72f4bLPPmE/edit?usp=sharing">Project Document</a></li>
                 <li><a href="../project/index.html">Project</a></li>
@@ -74,20 +74,14 @@
                         for.</h5>
                     <h6>-Milton Glaser</h6>
                 </blockquote>
-                <p>
-                    <h5>Hi there, my name is Aditya Ghosh. I’m currently pursuing a Master’s of Science degree in Computer Science at Northeastern University.</h5>
-                </p>
-                <p>
-                    <h5>I have 2 years of work experience at Tata Consultancy Services, as a Software Engineer.
-                    My major role in the company was to develop and maintain a web application for a client using my skills in ASP.NET, MSSQL and JavaScript.
-                    I took on a secondary role of Analysis and resolution of data misrepresentation, where I got an in depth knowledge about my project’s database structure. Further I learnt about performance tuning by optimizing joins. I used this technique to optimize over 20 Stored Procedures during my tenure in the company.
-                    </h5>
-                </p>
-                <p>
+                <h5>Hi there, my name is Aditya Ghosh. I’m currently pursuing a Master’s of Science degree in Computer Science at Northeastern University.</h5>
+                <h5>I have 2 years of work experience at Tata Consultancy Services, as a Software Engineer.
+                My major role in the company was to develop and maintain a web application for a client using my skills in ASP.NET, MSSQL and JavaScript.
+                I took on a secondary role of Analysis and resolution of data misrepresentation, where I got an in depth knowledge about my project’s database structure. Further I learnt about performance tuning by optimizing joins. I used this technique to optimize over 20 Stored Procedures during my tenure in the company.
+                </h5>
                 <h5>
                 Currently I'm building responsive web application using the MEAN stack. Check my <a href="https://docs.google.com/document/d/1kYC5uNZ6V7gJsAE-lStp5Bqs4d9AdjHKD72f4bLPPmE/edit?usp=sharing" target="_blank">Project Documentation</a> for a brief overview of the application.
                 </h5>
-                </p>
             </div>
             <div class="row">
                 <div class="col-xs-6 col-lg-6">
